# instant-msg-api

./: .env.default  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.archive/: requirements.txt
.archive/.github/: dependabot.yml
.gitea/workflows/: ci.yml  conventional-commit.yml  release.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: api.py  main.py  webex.py
tests/: test_api.py
