[tool.poetry]
name = "instant-msg-api"
version = "0.0.0"
description = ""
authors = ["Luke Tainton <luke@tainton.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
webexteamssdk = "^1.7"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
coverage = "^7.6.9"
pylint = "^3.3.2"
pylint-exit = "^1.2.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
