[tool.poetry]
name = "instant-msg-api"
version = "0.0.0"
description = ""
authors = ["Luke Tainton <luke@tainton.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
fastapi = "^0.115.7"
pydantic = "^2.10.6"
webexteamssdk = "^1.7"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
coverage = "^7.6.10"
pylint = "^3.3.4"
pylint-exit = "^1.2.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
