[project]
name = "instant-msg-api"
version = "0.0.0"
description = ""
readme = "README.md"
package-mode = false
authors = [
    {name = "Luke Tainton", email = "luke@tainton.uk"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "python-dotenv<2.0.0,>=1.0.1",
    "fastapi<1.0.0,>=0.115.8",
    "pydantic<3.0.0,>=2.10.6",
    "httpx<1.0.0,>=0.28.1",
    "uvicorn>=0.34.0",
    "webexpythonsdk>=2.0.4",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.uv]
dev-dependencies = [
    "black<25.2.0,>=25.1.0",
    "coverage<8.0.0,>=7.6.10",
    "pylint<4.0.0,>=3.3.4",
    "pylint-exit<2.0.0,>=1.2.0",
    "pytest<9.0.0,>=8.3.4",
]
